# VERTIGO-Creative

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/Components/: VuisElement.rs  mod.rs
src/Core/: State.rs  mod.rs
src/Editor/: Canvas.rs  Creation.rs  EditorPlugin.rs  EguiPanels.rs  History.rs  Selection.rs  Styling.rs  mod.rs
src/Serialization/: VuisFormat.rs  VuisSerializer.rs  mod.rs
